--- a/examples/iCrawlerTK.yaml
+++ b/examples/iCrawlerTK.yaml
@@ -7,4 +7,4 @@ crawlers: ["Bing", "Google"]
 # blank, "extralarge", "large", "medium", "small"
 # size: "extralarge"
 # On, Moderate, Off - Baidu does not have Safe Search AFAIK
-safe_mode: "On"
+safe_mode: "Off"
